--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           name: Push Docker image to Docker Hub
           command: |
             echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-            docker push adnananis/simple-node
+            docker push nvfede/simple-node
 workflows:
   version: 2
   build-and-deploy:
