--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,39 +2,34 @@ version: 2.1
 
 jobs:
   build:
+    working_directory: ~/repo
+
     docker:
-      - image: circleci/node:14-browsers
-    working_directory: ~/app
+      - image: circleci/node:13
+
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - node-v1-{{ checksum "package.json" }}
-            - node-v1-
-      - run: npm install
-      - save_cache:
-          paths:
-            - node_modules
-          key: node-v1-{{ checksum "package.json" }}
-      - setup_remote_docker:
-          version: 20.10.14
-          docker_layer_caching: true
+
       - run:
-          name: Build Docker image
+          name: Check versions
           command: |
-            docker build -t adnananis/simple-node .
-          environment:
-            DOCKER_PASSWORD: $DOCKER_PASSWORD
+            docker --version
+            docker-compose --version
+
       - run:
-          name: Push Docker image to Docker Hub
+          name: Build images
+          command: |
+            docker image prune --all
+            docker-compose -f docker-compose-build.yaml build --parallel
+
+      - run:
+          name: Push images
           command: |
             echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-            docker push nvfede/simple-node
-workflows:
-  version: 2
-  build-and-deploy:
-    jobs:
-      - build:
-          filters:
-            branches:
-              only: main
+            docker push rasterayzer/udagram-frontend
+            docker push rasterayzer/udagram-api-feed
+            docker push rasterayzer/udagram-api-user
+            docker push rasterayzer/udagram-reverseproxy
+    environment:
+      DOCKER_USERNAME: "$DOCKER_USERNAME"
+      DOCKER_PASSWORD: "$DOCKER_PASSWORD"
